--- a/about.html
+++ b/about.html
@@ -3,83 +3,199 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | BrightWave Enterprises</title>
-  <link rel="stylesheet" href="/assets/style.css" />
+  <meta name="description" content="Learn about BrightWave Enterprises, a Nigerian real estate startup transforming student housing." />
+  <title>About BrightWave Enterprises</title>
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="font-sans bg-gray-900 text-white">
 
   <!-- Navigation -->
-  <header>
-    <nav>
-      <h1>
-        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" style="height: 40px;" />
-        BrightWave Enterprises
-      </h1>
-      <div class="menu-toggle">☰</div>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/hostels">Hostels</a></li>
-        <li><a href="/faq">FAQs</a></li>
-        <li><a href="/contact">Contact</a></li>
+  <header class="bg-gray-800 shadow-md sticky top-0 z-50">
+    <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="/assets/images/brightwave-logo.png" alt="BrightWave Logo" class="h-10" />
+        <h1 class="text-2xl font-bold text-blue-400">BrightWave Enterprises</h1>
+      </div>
+      <button class="md:hidden menu-toggle text-2xl text-white" aria-label="Toggle navigation menu">☰</button>
+      <ul class="hidden md:flex space-x-6 text-lg font-semibold">
+        <li><a href="/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
+        <li><a href="/about" class="text-blue-400 hover:text-blue-300">About</a></li>
+        <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
+        <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
       </ul>
     </nav>
+    <ul class="nav-links hidden bg-gray-800 shadow-md md:hidden flex-col items-center space-y-4 py-4">
+      <li><a href="/" class="hover:text-blue-300 font-semibold">Home</a></li>
+      <li><a href="/hostels" class="hover:text-blue-300">Hostels</a></li>
+      <li><a href="/about" class="text-blue-400 font-semibold hover:text-blue-300">About</a></li>
+      <li><a href="/contact" class="hover:text-blue-300">Contact</a></li>
+      <li><a href="/faq" class="hover:text-blue-300">FAQ</a></li>
+    </ul>
   </header>
 
   <!-- About Content -->
-  <main class="about">
-    <section class="intro">
-      <h2>About BrightWave</h2>
-      <p>
-        BrightWave Enterprises is a Nigerian-based real estate startup transforming the student housing experience. 
-        We focus on building affordable, stylish, and secure accommodations that help students thrive academically while living comfortably and safely.
-      </p>
-      <p>
-        Our journey began with a mission to provide dignified spaces where young people can dream, study, and grow. 
-        Every hostel we design is guided by our values of integrity, functionality, and excellence.
-      </p>
-      <img src="/assets/images/who-we-are.jpg" alt="About BrightWave" class="about-img" />
+  <main class="about container mx-auto px-4 py-16">
+    <!-- Hero-like Intro Banner -->
+    <section class="intro-banner relative h-96 bg-[url('/assets/images/hostel-background.jpg')] bg-cover bg-center flex items-center justify-center mb-12">
+      <div class="absolute inset-0 bg-black opacity-60"></div>
+      <div class="relative text-center z-10">
+        <h1 class="text-5xl font-bold mb-4">About <span class="text-blue-400">BrightWave</span></h1>
+        <p class="text-xl font-semibold text-gray-200">Transforming Student Housing with Integrity and Excellence</p>
+      </div>
     </section>
 
+    <!-- Intro Text -->
+    <section class="intro bg-gradient-to-r from-gray-800 to-gray-700 rounded-lg shadow-xl p-8 md:p-12 text-center">
+      <p class="text-lg font-medium mb-4 max-w-3xl mx-auto">
+        <span class="font-bold">BrightWave Enterprises</span> is a Nigerian-based real estate startup <span class="font-bold">transforming the student housing experience</span>. 
+        We focus on building <span class="font-bold">affordable, stylish, and secure accommodations</span> that help students thrive academically while living comfortably and safely.
+      </p>
+      <p class="text-lg font-medium mb-8 max-w-3xl mx-auto">
+        Our journey began with a mission to provide <span class="font-bold">dignified spaces</span> where young people can dream, study, and grow. 
+        Every hostel we design is guided by our core values of <span class="font-bold">integrity, functionality, and excellence</span>.
+      </p>
+      <!-- Decorative element -->
+      <div class="absolute inset-0 -z-10 opacity-20 bg-[url('/assets/images/abstract-pattern.png')] bg-cover bg-center rounded-lg"></div>
+    </section>
+
+    <!-- Decorative Divider -->
+    <div class="divider my-12 h-1 bg-gradient-to-r from-transparent via-blue-400 to-transparent"></div>
+
+    <!-- Mission and Values Section -->
+    <section class="mission-values py-16">
+      <h3 class="text-3xl font-bold text-center mb-12">Our Mission & Values 🌟</h3>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+        <div class="value-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+          <div class="text-4xl mb-4">🏠</div>
+          <h4 class="text-xl font-bold mb-2">Our Mission</h4>
+          <p class="font-medium">To provide dignified, affordable, and secure housing that empowers students to excel.</p>
+        </div>
+        <div class="value-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+          <div class="text-4xl mb-4">🤝</div>
+          <h4 class="text-xl font-bold mb-2">Integrity</h4>
+          <p class="font-medium">We uphold the highest standards of honesty and transparency in all our dealings.</p>
+        </div>
+        <div class="value-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+          <div class="text-4xl mb-4">✨</div>
+          <h4 class="text-xl font-bold mb-2">Excellence</h4>
+          <p class="font-medium">We strive for perfection in every project, ensuring quality and functionality.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Decorative Divider -->
+    <div class="divider my-12 h-1 bg-gradient-to-r from-transparent via-blue-400 to-transparent"></div>
+
     <!-- Team Section -->
-    <section class="team">
-      <h3>Meet the Team 👥</h3>
-      <div class="team-grid">
-        <div class="member">
-          <img src="/assets/images/ceo-wally.jpg" alt="Wally H." class="team-photo"/>
-          <h4>Wally H.</h4>
-          <p>Founder & CEO</p>
+    <section class="team py-16">
+      <h3 class="text-3xl font-bold text-center mb-12">Meet the Team 👥</h3>
+      <div class="team-grid grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 max-w-5xl mx-auto">
+        <div class="member text-center">
+          <div class="relative group">
+            <img src="/assets/images/ceo-wally.jpg" alt="Wally H." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
+          </div>
+          <h4 class="text-xl font-bold mt-4 text-blue-400">Wally H.</h4>
+          <p class="font-semibold text-gray-300">Founder & CEO</p>
+          <p class="text-sm font-medium text-gray-400 mt-2">With 3 years in real estate, Wally leads BrightWave with a vision for innovative student housing.</p>
+          <div class="flex justify-center space-x-4 mt-2">
+            <a href="#" class="text-blue-400 hover:text-blue-300">🔗</a>
+          </div>
         </div>
-        <div class="member">
-          <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." class="team-photo"/>
-          <h4>Al-Ameen A.</h4>
-          <p>Project/Property Manager</p>
+        <div class="member text-center">
+          <div class="relative group">
+            <img src="/assets/images/property-manager-alameen.jpg" alt="Al-Ameen A." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
+          </div>
+          <h4 class="text-xl font-bold mt-4 text-blue-400">Al-Ameen A.</h4>
+          <p class="font-semibold text-gray-300">Project/Property Manager</p>
+          <p class="text-sm font-medium text-gray-400 mt-2">Al-Ameen ensures every project meets our high standards of quality and safety.</p>
+          <div class="flex justify-center space-x-4 mt-2">
+            <a href="#" class="text-blue-400 hover:text-blue-300">🔗</a>
+          </div>
         </div>
-        <div class="member">
-          <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." class="team-photo"/>
-          <h4>Kamal B.</h4>
-          <p>Realtor</p>
+        <div class="member text-center">
+          <div class="relative group">
+            <img src="/assets/images/realtor-kamal.jpg" alt="Kamal B." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
+          </div>
+          <h4 class="text-xl font-bold mt-4 text-blue-400">Kamal B.</h4>
+          <p class="font-semibold text-gray-300">Realtor</p>
+          <p class="text-sm font-medium text-gray-400 mt-2">Kamal connects with clients to find the perfect housing solutions for students.</p>
+          <div class="flex justify-center space-x-4 mt-2">
+            <a href="#" class="text-blue-400 hover:text-blue-300">🔗</a>
+          </div>
         </div>
-        <div class="member">
-          <img src="/assets/images/oversight-Realtor-Habeeb.jpg" alt="Habeeb O." class="team-photo"/>
-          <h4>Habeeb O.</h4>
-          <p>Site Operations & Oversight</p>
+        <div class="member text-center">
+          <div class="relative group">
+            <img src="/assets/images/oversight-Realtor-Habeeb.jpg" alt="Habeeb O." class="w-48 h-48 rounded-full object-cover mx-auto shadow-lg transition-transform duration-300 group-hover:scale-105 group-hover:shadow-xl" />
+            <div class="absolute inset-0 rounded-full bg-blue-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
+          </div>
+          <h4 class="text-xl font-bold mt-4 text-blue-400">Habeeb O.</h4>
+          <p class="font-semibold text-gray-300">Site Operations & Oversight</p>
+          <p class="text-sm font-medium text-gray-400 mt-2">Habeeb oversees operations to ensure smooth and efficient project execution.</p>
+          <div class="flex justify-center space-x-4 mt-2">
+            <a href="#" class="text-blue-400 hover:text-blue-300">🔗</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Decorative Divider -->
+    <div class="divider my-12 h-1 bg-gradient-to-r from-transparent via-blue-400 to-transparent"></div>
+
+    <!-- Our Journey Section -->
+    <section class="journey py-16">
+      <h3 class="text-3xl font-bold text-center mb-12">Our Journey 🚀</h3>
+      <div class="timeline max-w-3xl mx-auto space-y-8">
+        <div class="timeline-item flex items-center">
+          <div class="timeline-dot w-6 h-6 bg-blue-400 rounded-full mr-4"></div>
+          <div>
+            <h4 class="text-xl font-bold">September 2024 - Founded</h4>
+            <p class="font-medium text-gray-300">BrightWave Enterprises was founded with a vision to transform student housing in Nigeria.</p>
+          </div>
+        </div>
+        <div class="timeline-item flex items-center">
+          <div class="timeline-dot w-6 h-6 bg-blue-400 rounded-full mr-4"></div>
+          <div>
+            <h4 class="text-xl font-bold">December 2024 - Phase 1 Construction</h4>
+            <p class="font-medium text-gray-300">Started construction of Phase 1 hostel, focusing on security and comfort.</p>
+          </div>
+        </div>
+        <div class="timeline-item flex items-center">
+          <div class="timeline-dot w-6 h-6 bg-blue-400 rounded-full mr-4"></div>
+          <div>
+            <h4 class="text-xl font-bold">Phase 2 Expansion - Pending</h4>
+            <p class="font-medium text-gray-300">Plans for 32-35 additional rooms are in progress, awaiting final approval.</p>
+          </div>
         </div>
       </div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 BrightWave Enterprises. All rights reserved.</p>
+  <footer class="bg-gray-800 text-white py-8">
+    <div class="container mx-auto px-4 text-center">
+      <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
+      <div class="flex justify-center space-x-6">
+        <a href="#" class="hover:text-blue-400 font-semibold">Facebook</a>
+        <a href="#" class="hover:text-blue-400 font-semibold">Twitter</a>
+        <a href="#" class="hover:text-blue-400 font-semibold">Instagram</a>
+      </div>
+    </div>
   </footer>
 
   <!-- Mobile Menu Script -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.menu-toggle');
-      const navLinks = document.querySelector('nav ul');
-      toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
+      const navLinks = document.querySelector('.nav-links');
+      toggle.addEventListener('click', () => {
+        navLinks.classList.toggle('hidden');
+        toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
+      });
     });
   </script>
 
