--- a/hostel-detail.html
+++ b/hostel-detail.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Details of BrightWave Phase 1 Hostel - Affordable student housing in Nigeria.">
+  <!-- Open Graph Meta Tags for Previews -->
+  <meta property="og:title" content="BrightWave Phase 1 Hostel | BrightWave Enterprises" />
+  <meta property="og:description" content="Explore BrightWave Phase 1 Hostel in Kwara State, Nigeria. Affordable, secure, and modern student housing with top amenities." />
+  <meta property="og:image" content="https://brightwaveenterprises.online/assets/images/brightwave-preview.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="500" />
+  <meta property="og:image:height" content="500" />
+  <meta property="og:url" content="https://brightwaveenterprises.online/hostel-detail" />
+  <meta property="og:type" content="website" />
   <title>BrightWave Phase 1 Hostel | BrightWave Enterprises</title>
   <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -38,71 +47,142 @@
 <!-- Hostel Detail Content -->
 <main class="hostel-detail container mx-auto px-4 py-16">
 
-  <!-- Banner -->
-  <section class="hostel-banner text-center">
-    <h2 class="text-4xl font-bold mb-4">BrightWave Phase 1 Hostel</h2>
-    <p class="text-xl font-medium mb-8">Luxury Student Living. Comfort, Security & Community.</p>
+  <!-- Hero Banner -->
+  <section class="hostel-banner relative h-96 bg-[url('/assets/images/phase1/phase1-aerial-topview.jpg')] bg-cover bg-center flex items-center justify-center mb-12">
+    <div class="absolute inset-0 bg-black opacity-60"></div>
+    <div class="relative text-center z-10">
+      <h1 class="text-5xl font-bold mb-4">BrightWave Phase 1 Hostel</h1>
+      <p class="text-xl font-medium mb-6">Luxury Student Living in Kwara State, Nigeria</p>
+      <a href="#contact-form" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg hover:bg-blue-700 transition font-semibold text-lg">Book a Tour</a>
+    </div>
   </section>
 
+  <!-- Overview Section -->
+  <section class="overview bg-gradient-to-r from-gray-800 to-gray-700 rounded-lg shadow-xl p-8 md:p-12 text-center mb-12">
+    <h2 class="text-3xl font-bold mb-6">Welcome to BrightWave Phase 1 Hostel</h2>
+    <p class="text-lg font-medium mb-4 max-w-3xl mx-auto">
+      Located in the heart of Osunlade Village, Malete, our Phase 1 Hostel offers modern, affordable, and secure accommodation for students. With 10 self-contained rooms, top-notch amenities, and a focus on community, this hostel is designed to support your academic journey while providing a comfortable and stylish living experience.
+    </p>
+    <p class="text-lg font-medium mb-6 max-w-3xl mx-auto">
+      <span class="font-bold">Pricing:</span> Contact us for pricing details.<br>
+      <span class="font-bold">Target Audience:</span> Ideal for university students in Kwara State seeking a safe and vibrant living space.<br>
+      <span class="font-bold">Availability:</span> Now accepting bookings for the 2025/2026 academic session.
+    </p>
+  </section>
+
+  <!-- Decorative Divider -->
+  <div class="divider my-12 h-1 bg-gradient-to-r from-transparent via-blue-400 to-transparent"></div>
+
   <!-- Hostel Slideshow Gallery -->
-  <section class="hostel-gallery">
-    <h3 class="text-3xl font-bold text-center mb-8">Gallery</h3>
+  <section class="hostel-gallery py-16">
+    <h2 class="text-3xl font-bold text-center mb-8">Explore Our Hostel</h2>
     <div class="slideshow-container relative max-w-4xl mx-auto overflow-hidden rounded-lg shadow-lg">
-      <div class="slide hidden">
-        <img src="/assets/images/phase1/phase1-aerial-topview.jpg" alt="Aerial Topview" class="w-full h-auto" />
+      <div class="slides flex transition-transform duration-1000 ease-in-out">
+        <div class="slide flex-shrink-0 w-full">
+          <img src="/assets/images/phase1/phase1-aerial-topview.jpg" alt="Aerial Topview" class="w-full h-[450px] object-cover rounded-lg" />
+        </div>
+        <div class="slide flex-shrink-0 w-full">
+          <img src="/assets/images/phase1/phase1-bedroom.jpg" alt="Bedroom Interior" class="w-full h-[450px] object-cover rounded-lg" />
+        </div>
+        <div class="slide flex-shrink-0 w-full">
+          <img src="/assets/images/phase1/phase1-bathroom.jpg" alt="Bathroom View" class="w-full h-[450px] object-cover rounded-lg" />
+        </div>
+        <div class="slide flex-shrink-0 w-full">
+          <img src="/assets/images/phase1/phase1-kitchen.jpg" alt="Kitchenette Area" class="w-full h-[450px] object-cover rounded-lg" />
+        </div>
+        <div class="slide flex-shrink-0 w-full">
+          <img src="/assets/images/phase1/phase1-courtyard-snooker.jpg" alt="Courtyard and Snooker Recreation" class="w-full h-[450px] object-cover rounded-lg" />
+        </div>
+        <div class="slide flex-shrink-0 w-full">
+          <img src="/assets/images/phase1/phase1-entrance-security.jpg" alt="Entrance and Security" class="w-full h-[450px] object-cover rounded-lg" />
+        </div>
       </div>
-      <div class="slide hidden">
-        <img src="/assets/images/phase1/phase1-bedroom.jpg" alt="Bedroom Interior" class="w-full h-auto" />
-      </div>
-      <div class="slide hidden">
-        <img src="/assets/images/phase1/phase1-bathroom.jpg" alt="Bathroom View" class="w-full h-auto" />
-      </div>
-      <div class="slide hidden">
-        <img src="/assets/images/phase1/phase1-kitchen.jpg" alt="Kitchenette Area" class="w-full h-auto" />
-      </div>
-      <div class="slide hidden">
-        <img src="/assets/images/phase1/phase1-courtyard-snooker.jpg" alt="Courtyard and Snooker Recreation" class="w-full h-auto" />
-      </div>
-      <div class="slide hidden">
-        <img src="/assets/images/phase1/phase1-entrance-security.jpg" alt="Entrance and Security" class="w-full h-auto" />
+      <!-- Navigation Arrows -->
+      <button class="prev absolute top-1/2 left-4 transform -translate-y-1/2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700 transition" aria-label="Previous Slide">❮</button>
+      <button class="next absolute top-1/2 right-4 transform -translate-y-1/2 bg-gray-800 text-white p-2 rounded-full hover:bg-gray-700 transition" aria-label="Next Slide">❯</button>
+      <!-- Navigation Dots -->
+      <div class="dots text-center mt-4">
+        <span class="dot w-3 h-3 bg-gray-500 rounded-full inline-block mx-1 cursor-pointer"></span>
+        <span class="dot w-3 h-3 bg-gray-500 rounded-full inline-block mx-1 cursor-pointer"></span>
+        <span class="dot w-3 h-3 bg-gray-500 rounded-full inline-block mx-1 cursor-pointer"></span>
+        <span class="dot w-3 h-3 bg-gray-500 rounded-full inline-block mx-1 cursor-pointer"></span>
+        <span class="dot w-3 h-3 bg-gray-500 rounded-full inline-block mx-1 cursor-pointer"></span>
+        <span class="dot w-3 h-3 bg-gray-500 rounded-full inline-block mx-1 cursor-pointer"></span>
       </div>
     </div>
   </section>
 
   <!-- Hostel Features -->
   <section class="hostel-features py-16">
-    <h3 class="text-3xl font-bold text-center mb-8">Amenities</h3>
-    <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-2xl mx-auto">
-      <li class="font-medium text-lg">10 Self-contained Rooms (Private Bathrooms + Kitchenette)</li>
-      <li class="font-medium text-lg">24/7 Security Personnel</li>
-      <li class="font-medium text-lg">Solar Power Backup System</li>
-      <li class="font-medium text-lg">General Generator Access</li>
-      <li class="font-medium text-lg">360° CCTV Surveillance</li>
-      <li class="font-medium text-lg">Snooker Board for Recreation</li>
-      <li class="font-medium text-lg">Reliable 24/7 Water Supply</li>
-    </ul>
+    <h2 class="text-3xl font-bold text-center mb-8">Amenities & Features</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-5xl mx-auto">
+      <div class="feature-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+        <div class="text-4xl mb-4">🏠</div>
+        <h3 class="text-xl font-bold mb-2">Self-Contained Rooms</h3>
+        <p class="font-medium">10 rooms with private bathrooms and kitchenettes for ultimate convenience.</p>
+      </div>
+      <div class="feature-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+        <div class="text-4xl mb-4">🔒</div>
+        <h3 class="text-xl font-bold mb-2">Top-Notch Security</h3>
+        <p class="font-medium">24/7 security personnel, 360° CCTV, and secure entrance.</p>
+      </div>
+      <div class="feature-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+        <div class="text-4xl mb-4">☀️</div>
+        <h3 class="text-xl font-bold mb-2">Reliable Utilities</h3>
+        <p class="font-medium">Solar power backup, general generator, and 24/7 water supply.</p>
+      </div>
+      <div class="feature-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+        <div class="text-4xl mb-4">🎱</div>
+        <h3 class="text-xl font-bold mb-2">Recreation</h3>
+        <p class="font-medium">Snooker board and courtyard for relaxation and community bonding.</p>
+      </div>
+      <div class="feature-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+        <div class="text-4xl mb-4">📍</div>
+        <h3 class="text-xl font-bold mb-2">Prime Location</h3>
+        <p class="font-medium">Located in Osunlade Village, Malete, close to universities in Kwara State.</p>
+      </div>
+      <div class="feature-item text-center p-6 bg-gray-700 rounded-lg shadow-lg">
+        <div class="text-4xl mb-4">💰</div>
+        <h3 class="text-xl font-bold mb-2">Affordable Pricing</h3>
+        <p class="font-medium">Contact us for pricing details.</p>
+      </div>
+    </div>
   </section>
 
   <!-- Location Section -->
   <section class="location-map py-16">
-    <h3 class="text-3xl font-bold text-center mb-8">Verified Location</h3>
-    <p class="text-lg font-medium text-center mb-8">Surveyed property located at Osunlade Village, Malete — Moro LGA, Kwara State, Nigeria.</p>
-    <div class="flex justify-center mb-8">
-      <img src="/assets/images/who-we-are.jpg" alt="Survey Plan" class="max-w-xs rounded-lg shadow-lg border-2 border-gray-600" />
-    </div>
+    <h2 class="text-3xl font-bold text-center mb-8">Our Location</h2>
+    <p class="text-lg font-medium text-center mb-8">Located at Osunlade Village, Malete — Moro LGA, Kwara State, Nigeria.</p>
     <iframe 
       src="https://maps.google.com/maps?q=8.583498,4.555573&z=15&output=embed" 
       width="100%" 
-      height="300" 
+      height="400" 
       class="rounded-lg shadow-lg" 
       allowfullscreen="" 
       loading="lazy">
     </iframe>
   </section>
 
+  <!-- Testimonials Section (Placeholder) -->
+  <section class="testimonials py-16 bg-gray-800">
+    <h2 class="text-3xl font-bold text-center mb-8">What Our Residents Say</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
+      <div class="testimonial p-6 bg-gray-700 rounded-lg shadow-lg">
+        <p class="font-medium mb-4">"The best student housing I’ve ever lived in! The security and amenities make it worth every penny."</p>
+        <p class="font-semibold text-blue-400">— Aisha M., Student</p>
+      </div>
+      <div class="testimonial p-6 bg-gray-700 rounded-lg shadow-lg">
+        <p class="font-medium mb-4">"I love the community here. The courtyard and snooker board are great for relaxing after classes."</p>
+        <p class="font-semibold text-blue-400">— Tunde O., Student</p>
+      </div>
+    </div>
+    <!-- Note: Update with real testimonials from residents if available. -->
+  </section>
+
   <!-- Contact Section -->
-  <section class="hostel-contact-form py-16">
-    <h3 class="text-3xl font-bold text-center mb-8">Request More Information</h3>
+  <section id="contact-form" class="hostel-contact-form py-16">
+    <h2 class="text-3xl font-bold text-center mb-8">Get in Touch</h2>
+    <p class="text-lg font-medium text-center mb-8 max-w-2xl mx-auto">Ready to make BrightWave Phase 1 your home? Fill out the form below to request more information or book a tour.</p>
     <form id="hostelContactForm" class="max-w-lg mx-auto space-y-4">
       <input type="text" id="fullName" name="fullName" placeholder="Your Full Name" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
       <input type="email" id="email" name="email" placeholder="Your Email Address" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
@@ -114,10 +194,10 @@
   </section>
 
   <!-- Phase 2 Promotion -->
-  <section class="coming-soon bg-gray-800 py-16 text-center">
-    <h3 class="text-3xl font-bold mb-4">Phase 2 - Coming Soon ⚡</h3>
-    <p class="text-lg font-medium mb-8">We are expanding with 2 more plots to build 32-35 rooms, more amenities, and recreational features.</p>
-    <a href="/hostels" class="inline-block text-blue-400 hover:text-blue-300 font-semibold text-lg">Back to Hostels</a>
+  <section class="coming-soon bg-gradient-to-r from-blue-900 to-blue-700 py-16 text-center">
+    <h2 class="text-3xl font-bold mb-4">Phase 2 - Coming Soon ⚡</h2>
+    <p class="text-lg font-medium mb-8 max-w-2xl mx-auto">We’re expanding with 2 more plots to build 32-35 rooms, additional amenities, and recreational features to enhance your living experience.</p>
+    <a href="/hostels" class="inline-block text-white border-2 border-white px-6 py-3 rounded-lg hover:bg-white hover:text-blue-900 transition font-semibold text-lg">Back to Hostels</a>
   </section>
 
 </main>
@@ -137,28 +217,68 @@
 <!-- Scripts -->
 <script>
   document.addEventListener('DOMContentLoaded', () => {
+    // Mobile Menu Toggle
     const toggle = document.querySelector('.menu-toggle');
     const navLinks = document.querySelector('.nav-links');
     toggle.addEventListener('click', () => {
       navLinks.classList.toggle('hidden');
       toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
     });
-  });
 
-  // Slideshow script
-  let slideIndex = 0;
-  function showSlides() {
-    let slides = document.getElementsByClassName("slide");
-    for (let i = 0; i < slides.length; i++) {
-      slides[i].classList.add('hidden');
+    // Slideshow Script
+    let slideIndex = 0;
+    const slides = document.querySelector('.slides');
+    const slideElements = document.querySelectorAll('.slide');
+    const dots = document.querySelectorAll('.dot');
+    const totalSlides = slideElements.length;
+
+    function updateSlides() {
+      slides.style.transform = `translateX(-${slideIndex * 100}%)`;
+      dots.forEach((dot, index) => {
+        dot.classList.toggle('bg-blue-400', index === slideIndex);
+        dot.classList.toggle('bg-gray-500', index !== slideIndex);
+      });
     }
-    slideIndex++;
-    if (slideIndex > slides.length) { slideIndex = 1; }
-    slides[slideIndex - 1].classList.remove('hidden');
-    slides[slideIndex - 1].classList.add('animate-fade');
-    setTimeout(showSlides, 3000); // Change every 3 seconds
-  }
-  showSlides();
+
+    function showNextSlide() {
+      slideIndex = (slideIndex + 1) % totalSlides;
+      updateSlides();
+    }
+
+    function showPrevSlide() {
+      slideIndex = (slideIndex - 1 + totalSlides) % totalSlides;
+      updateSlides();
+    }
+
+    // Auto-slide every 5 seconds
+    let autoSlide = setInterval(showNextSlide, 5000);
+
+    // Navigation Arrows
+    document.querySelector('.next').addEventListener('click', () => {
+      clearInterval(autoSlide);
+      showNextSlide();
+      autoSlide = setInterval(showNextSlide, 5000);
+    });
+
+    document.querySelector('.prev').addEventListener('click', () => {
+      clearInterval(autoSlide);
+      showPrevSlide();
+      autoSlide = setInterval(showNextSlide, 5000);
+    });
+
+    // Navigation Dots
+    dots.forEach((dot, index) => {
+      dot.addEventListener('click', () => {
+        clearInterval(autoSlide);
+        slideIndex = index;
+        updateSlides();
+        autoSlide = setInterval(showNextSlide, 5000);
+      });
+    });
+
+    // Initial Slide
+    updateSlides();
+  });
 
   // Form submission (commented out due to sandbox restrictions)
   /*
