--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
   <meta property="og:type" content="website" />
   <title>About BrightWave Enterprises</title>
   <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
+  <!-- Font Awesome for Social Media Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans bg-gray-900 text-white">
@@ -189,9 +191,18 @@
     <div class="container mx-auto px-4 text-center">
       <p class="mb-4 font-medium">© 2025 BrightWave Enterprises. All rights reserved.</p>
       <div class="flex justify-center space-x-6">
-        <a href="#" class="hover:text-blue-400 font-semibold">Facebook</a>
-        <a href="#" class="hover:text-blue-400 font-semibold">Twitter</a>
-        <a href="#" class="hover:text-blue-400 font-semibold">Instagram</a>
+        <a href="https://www.facebook.com/share/19BvJAymc3/?mibextid=wwXIfr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
+          <i class="fab fa-facebook-f"></i>
+          <span>Facebook</span>
+        </a>
+        <a href="https://x.com/brightwave__?s=21" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
+          <i class="fab fa-x-twitter"></i>
+          <span>Twitter</span>
+        </a>
+        <a href="https://www.instagram.com/brightwave__?igsh=MXN3NHAzdGU1a2ppaQ%3D&utm_-source=qr" class="flex items-center space-x-2 hover:text-blue-400 font-semibold">
+          <i class="fab fa-instagram"></i>
+          <span>Instagram</span>
+        </a>
       </div>
     </div>
   </footer>
