--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Contact BrightWave Enterprises for inquiries about student hostels in Nigeria." />
-  <title>Contact Us | BrightWave Enterprises</title>
-  <link rel="icon" type="image/png" href="/assets/images/brightwave-logo.png" />
-  <!-- Font Awesome for Social Media Icons -->
+  <title>Contact | BrightWave Enterprises</title>
+  <link rel="icon" href="/assets/images/brightwave-logo.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -37,37 +36,19 @@
     </ul>
   </header>
 
-  <!-- Contact Page Content -->
+  <!-- Contact Content -->
   <main class="contact container mx-auto px-4 py-16">
-    <section class="contact-intro text-center">
-      <h2 class="text-4xl font-bold mb-4">Contact Us 📬</h2>
-      <p class="text-lg font-medium mb-8 max-w-2xl mx-auto">
-        Whether you're a future tenant, investor, or curious about what we do — we’d love to hear from you.
-        Fill out the form below and someone from our team will get back to you shortly.
-      </p>
-      <img src="/assets/images/customer-service.png" alt="Customer Support" class="max-w-[100px] mx-auto mb-8" />
-    </section>
-
     <section class="contact-form">
+      <h2 class="text-4xl font-bold text-center mb-8">Get in Touch</h2>
+      <p class="text-lg font-medium text-center mb-8 max-w-2xl mx-auto">Have a question or want to book a tour? Fill out the form below, and we’ll get back to you soon!</p>
       <form id="contactForm" class="max-w-lg mx-auto space-y-4">
-        <div>
-          <label for="name" class="block text-lg font-medium mb-2">Full Name</label>
-          <input type="text" id="name" name="name" placeholder="e.g. John Doe" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
-        </div>
-
-        <div>
-          <label for="email" class="block text-lg font-medium mb-2">Email Address</label>
-          <input type="email" id="email" name="email" placeholder="e.g. john@example.com" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
-        </div>
-
-        <div>
-          <label for="message" class="block text-lg font-medium mb-2">Your Message</label>
-          <textarea id="message" name="message" rows="6" placeholder="Type your message here..." required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400"></textarea>
-        </div>
-
+        <input type="text" id="fullName" name="fullName" placeholder="Your Full Name" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
+        <input type="email" id="email" name="email" placeholder="Your Email Address" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
+        <input type="text" id="phone" name="phone" placeholder="Your Phone Number" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400" />
+        <textarea id="message" name="message" placeholder="Your Message" rows="5" required class="w-full p-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:border-blue-400"></textarea>
         <button type="submit" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition font-semibold">Send Message</button>
       </form>
-      <div id="statusMessage" class="text-center mt-4 font-medium"></div>
+      <div id="formStatus" class="text-center mt-4"></div>
     </section>
   </main>
 
@@ -101,46 +82,45 @@
         navLinks.classList.toggle('hidden');
         toggle.textContent = navLinks.classList.contains('hidden') ? '☰' : '✕';
       });
-    });
-  </script>
 
-  <!-- Contact Form Script (Commented out due to sandbox restrictions) -->
-  <script>
-    /*
-    document.getElementById("contactForm").addEventListener("submit", async function (e) {
-      e.preventDefault();
+      // Form submission handler
+      document.getElementById("contactForm").addEventListener("submit", async function(e) {
+        e.preventDefault();
+        const fullName = document.getElementById("fullName").value.trim();
+        const email = document.getElementById("email").value.trim();
+        const phone = document.getElementById("phone").value.trim();
+        const message = document.getElementById("message").value.trim();
+        const statusDiv = document.getElementById("formStatus");
 
-      const name = document.getElementById("name").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const message = document.getElementById("message").value.trim();
-      const statusDiv = document.getElementById("statusMessage");
-
-      try {
-        const response = await fetch("https://brightwaveenterprises.online/api/contact", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ name, email, message })
-        });
-
-        const result = await response.json();
-
-        statusDiv.textContent = result.message;
-        statusDiv.style.color = result.success ? "green" : "red";
-
-        if (result.success) {
-          document.getElementById("contactForm").reset();
+        // Basic validation
+        if (!email.match(/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/)) {
+          statusDiv.textContent = "Please enter a valid email address.";
+          statusDiv.style.color = "red";
+          return;
+        }
+        if (!phone.match(/^\+?\d{10,15}$/)) {
+          statusDiv.textContent = "Please enter a valid phone number.";
+          statusDiv.style.color = "red";
+          return;
         }
 
-      } catch (error) {
-        statusDiv.textContent = "Something went wrong. Please try again.";
-        statusDiv.style.color = "red";
-        console.error("Error:", error);
-      }
+        try {
+          const response = await fetch("/api/contact", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ fullName, email, phone, message })
+          });
+          const result = await response.json();
+          statusDiv.textContent = result.message;
+          statusDiv.style.color = result.success ? "green" : "red";
+          if (result.success) document.getElementById("contactForm").reset();
+        } catch (error) {
+          statusDiv.textContent = "Something went wrong. Please try again.";
+          statusDiv.style.color = "red";
+          console.error("Error:", error);
+        }
+      });
     });
-    */
-    // Note: Form submission is disabled due to sandbox restrictions. Implement server-side handling for the form at "https://brightwaveenterprises.online/api/contact".
   </script>
 
 </body>
